modules/bootkube: fix labels/selectors
For identity/ingress selectors now match their corresponding labels.

For apiserver/proxy they match the current KVO state.

--- a/modules/tectonic/resources/manifests/identity/deployment.yaml
+++ b/modules/tectonic/resources/manifests/identity/deployment.yaml
@@ -10,6 +10,7 @@ spec:
   selector:
     matchLabels:
       k8s-app: tectonic-identity
+      component: identity
   replicas: 2
   # New identity pods must be healthy for 30 seconds
   # before they're marked as ready.
