--- a/modules/tectonic/resources/manifests/ingress/hostport/daemonset.yaml
+++ b/modules/tectonic/resources/manifests/ingress/hostport/daemonset.yaml
@@ -15,6 +15,8 @@ spec:
   selector:
     matchLabels:
       k8s-app: tectonic-lb
+      component: ingress-controller
+      type: nginx
   template:
     metadata:
       labels:
