--- a/modules/tectonic/resources/manifests/ingress/nodeport/deployment.yaml
+++ b/modules/tectonic/resources/manifests/ingress/nodeport/deployment.yaml
@@ -12,6 +12,8 @@ spec:
   selector:
     matchLabels:
       k8s-app: tectonic-lb
+      component: ingress-controller
+      type: nginx
   template:
     metadata:
       labels:
