--- a/modules/bootkube/resources/manifests/kube-controller-manager.yaml
+++ b/modules/bootkube/resources/manifests/kube-controller-manager.yaml
@@ -49,6 +49,7 @@ spec:
         - --pod-eviction-timeout=${pod_eviction_timeout}
         - --cloud-provider=${cloud_provider}
         ${cloud_provider_config_flag}
+        - --v=${k8s_log_verbosity}
         livenessProbe:
           httpGet:
             path: /healthz
