--- a/modules/bootkube/resources/manifests/kube-scheduler.yaml
+++ b/modules/bootkube/resources/manifests/kube-scheduler.yaml
@@ -40,6 +40,7 @@ spec:
         - ./hyperkube
         - scheduler
         - --leader-elect=true
+        - --v=${k8s_log_verbosity}
         livenessProbe:
           httpGet:
             path: /healthz
