--- a/modules/bootkube/resources/manifests/kube-proxy.yaml
+++ b/modules/bootkube/resources/manifests/kube-proxy.yaml
@@ -32,6 +32,7 @@ spec:
         - --proxy-mode=iptables
         - --hostname-override=$(NODE_NAME)
         - --cluster-cidr=${cluster_cidr}
+        - --v=${k8s_log_verbosity}
         env:
           - name: NODE_NAME
             valueFrom:
