modules/ignition: add tectonic_kubelet_debug_config variable
This adds an internal variable for CI use only which enables setting
debug flags (most notably docker GC) on the kubelet.

Partially fixes #INST-613

--- a/modules/ignition/resources/services/kubelet.service
+++ b/modules/ignition/resources/services/kubelet.service
@@ -38,6 +38,7 @@ ExecStart=/usr/lib/coreos/kubelet-wrapper \
   --client-ca-file=/etc/kubernetes/ca.crt \
   --cloud-provider=${cloud_provider} \
   ${cloud_provider_config} \
+  ${debug_config} \
   --anonymous-auth=false
 
 ExecStop=-/usr/bin/rkt stop --uuid-file=/var/cache/kubelet-pod.uuid
