*: fix cert and env binding for k8s-node-boostrapper
This change adds a bindmount of /etc/ssl
It will also load /etc/profile.env into the env to
The /etc/profile.env file is populated by ignition
based on: https://tinyurl.com/zme96wx
that we can operate in proxy environments.

--- a/modules/ignition/resources/services/k8s-node-bootstrap.service
+++ b/modules/ignition/resources/services/k8s-node-bootstrap.service
@@ -11,11 +11,12 @@ RestartSec=10
 TimeoutStartSec=1h
 ExecStartPre=/usr/bin/mkdir -p /etc/kubernetes
 ${kubeconfig_fetch_cmd}
+ExecStartPre=-/bin/touch /etc/profile.env
 ExecStartPre=/usr/bin/docker run --rm \
+            --env-file /etc/profile.env \
             --tmpfs /tmp \
             -v /usr/share:/usr/share:ro \
             -v /usr/lib/os-release:/usr/lib/os-release:ro \
-            -v /usr/share/ca-certificates/ca-certificates.crt:/etc/ssl/certs/ca-certificates.crt:ro \
             -v /var/lib/torcx:/var/lib/torcx \
             -v /var/run/dbus:/var/run/dbus \
             -v /run/metadata:/run/metadata:ro \
@@ -24,6 +25,7 @@ ExecStartPre=/usr/bin/docker run --rm \
             -v /etc/coreos:/etc/coreos:ro \
             -v /etc/torcx:/etc/torcx \
             -v /etc/kubernetes:/etc/kubernetes \
+            -v /etc/ssl/certs/ca-certificates.crt:/etc/ssl/certs/ca-certificates.crt \
             ${tectonic_torcx_image_url}:${tectonic_torcx_image_tag} \
             /tectonic-torcx-bootstrap \
             --upgrade-os=${bootstrap_upgrade_cl} \
