--- a/modules/bootkube/resources/manifests/cluster-config.yaml
+++ b/modules/bootkube/resources/manifests/cluster-config.yaml
@@ -22,3 +22,10 @@ data:
       service_cidr: ${service_cidr}
     initialConfig:
       initial_master_count: ${master_count}
+  network-config: |
+    apiVersion: v1
+    kind: NetworkConfig
+    podCIDR: ${cluster_cidr}
+    networkProfile: ${tectonic_networking}
+    calicoConfig:
+      mtu: ${calico_mtu}
