--- a/modules/tectonic/resources/manifests/updater/tectonic-monitoring-config.yaml
+++ b/modules/tectonic/resources/manifests/updater/tectonic-monitoring-config.yaml
@@ -13,6 +13,9 @@ data:
       baseImage: ${prometheus_base_image}
     alertmanagerMain:
       baseImage: ${alertmanager_base_image}
+    grafana:
+      baseImage: ${grafana_base_image}
+      grafanaWatcherBaseImage: ${grafana_watcher_base_image}
     ingress:
       baseAddress: ${console_base_host}
     auth:
