bazel*: build and test frontend code
Implements: INST-744

This commit adds fully hermetic builds of the JavaScript and Go bindata.
Bazel will now manage its own copy of the JavaScript node_modules
directory and use it for all builds.

To build the JavaScript, run:
```sh
bazel build installer/frontend
```

To build the bindata, run:
```sh
bazel build installer:bindata
```

To run the frontend tests, run:
```sh
bazel test installer/frontend:frontend_test
```

To run the intsaller GUI tests, export the required environtment
variables as specified in `installer/frontend/ui-tests/README.md` and run:
```sh
bazel test installer/frontend:baremetal_installer_gui_test --test_env=TF_VAR_tectonic_license_path --test_env=TF_VAR_tectonic_pull_secret_path
```

--- a/installer/assets/BUILD.bazel
+++ b/installer/assets/BUILD.bazel
@@ -1,11 +1,13 @@
+package(default_visibility = ["//visibility:public"])
+
 load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
     srcs = [
         "assets.go",
+        ":bindata",
         "doc.go",
-        ":bindata"
     ],
     importpath = "github.com/coreos/tectonic-installer/installer/assets",
     visibility = ["//visibility:public"],
@@ -14,8 +16,8 @@ go_library(
 filegroup(
     name = "asset_files",
     srcs = glob(
-        ["**"],
-        exclude = ["*.go"],
+        ["**/*"],
+        exclude = ["bindata.go"],
     ),
 )
 
@@ -23,11 +25,11 @@ genrule(
     name = "bindata",
     srcs = [
         ":asset_files",
+        "//installer/frontend",
     ],
     outs = ["bindata.go"],
-    cmd = "$(location //installer/vendor/github.com/jteeuwen/go-bindata/go-bindata:go-bindata) -o $@ -pkg assets -prefix assets -ignore=$@ -ignore=doc.go -ignore=assets.go $(@D)",
+    cmd = "mkdir -p $(@D)/frontend/scripts && cp $(location //installer/frontend:frontend) $(@D)/frontend/scripts && cp -R installer/assets/* $(@D) && $(location //installer/vendor/github.com/jteeuwen/go-bindata/go-bindata:go-bindata) -o $@ -pkg assets -prefix $(@D) -ignore=$@ -ignore=doc.go -ignore=assets.go $(@D)/...",
     tools = [
         "//installer/vendor/github.com/jteeuwen/go-bindata/go-bindata",
     ],
-    visibility = ["//visibility:public"],
 )
