--- a/installer/api/BUILD.bazel
+++ b/installer/api/BUILD.bazel
@@ -15,6 +15,11 @@ go_library(
     importpath = "github.com/coreos/tectonic-installer/installer/api",
     visibility = ["//visibility:public"],
     deps = [
+        "//installer:go_default_library",
+        "//installer/pkg/aws:go_default_library",
+        "//installer/pkg/containerlinux:go_default_library",
+        "//installer/pkg/tectonic:go_default_library",
+        "//installer/pkg/terraform:go_default_library",
         "//installer/vendor/github.com/Sirupsen/logrus:go_default_library",
         "//installer/vendor/github.com/aws/aws-sdk-go/aws:go_default_library",
         "//installer/vendor/github.com/aws/aws-sdk-go/aws/awserr:go_default_library",
@@ -25,11 +30,6 @@ go_library(
         "//installer/vendor/github.com/aws/aws-sdk-go/service/route53:go_default_library",
         "//installer/vendor/github.com/aws/aws-sdk-go/service/route53domains:go_default_library",
         "//installer/vendor/github.com/coreos/go-semver/semver:go_default_library",
-        "//installer/assets:go_default_library",
-        "//installer/pkg/aws:go_default_library",
-        "//installer/pkg/containerlinux:go_default_library",
-        "//installer/pkg/tectonic:go_default_library",
-        "//installer/pkg/terraform:go_default_library",
         "//installer/vendor/github.com/dghubble/sessions:go_default_library",
         "//installer/vendor/github.com/kardianos/osext:go_default_library",
         "//installer/vendor/k8s.io/client-go/kubernetes:go_default_library",
