--- a/installer/cmd/installer/BUILD.bazel
+++ b/installer/cmd/installer/BUILD.bazel
@@ -6,20 +6,19 @@ go_library(
         "main.go",
         "platforms.go",
     ],
-    importpath = "github.com/coreos/tectonic-installer/intaller/installer/cmd/installer",
+    importpath = "github.com/coreos/tectonic-installer/installer/cmd/installer",
     visibility = ["//visibility:private"],
     deps = [
+        "//installer/api:go_default_library",
         "//installer/vendor/github.com/Sirupsen/logrus:go_default_library",
         "//installer/vendor/github.com/coreos/pkg/flagutil:go_default_library",
-        "//installer/api:go_default_library",
         "//installer/vendor/github.com/toqueteos/webbrowser:go_default_library",
     ],
 )
 
 go_binary(
     name = "installer",
+    embed = [":go_default_library"],
     importpath = "github.com/coreos/tectonic-installer/intaller/installer/cmd/installer",
-    library = ":go_default_library",
     visibility = ["//visibility:public"],
 )
-
