--- a/installer/frontend/package.json
+++ b/installer/frontend/package.json
@@ -11,12 +11,12 @@
   },
   "scripts": {
     "lint": "./node_modules/.bin/eslint --ext .js,.jsx .",
-    "build": "mkdir -p ../assets/frontend/scripts && ./node_modules/.bin/browserify --extension=.jsx app.jsx -o ../assets/frontend/scripts/app-bundle.js -t [ babelify ]",
+    "build": "export OUT=${OUT:-../assets/frontend/scripts/app-bundle.js} && mkdir -p $(dirname $OUT) && ./node_modules/.bin/browserify --extension=.jsx app.jsx -o $OUT -t [ babelify ]",
     "dev": "mkdir -p ../assets/frontend/scripts && ./node_modules/.bin/watchify --extension=.jsx app.jsx --verbose -d -o ../assets/frontend/scripts/app-bundle.js -t [ babelify ]",
     "postinstall": "./check-versions.js",
-    "test": "./node_modules/.bin/jest",
-    "aws-installer-tests": "./node_modules/.bin/nightwatch --test ui-tests/tests/aws.js",
-    "baremetal-installer-tests": "./node_modules/.bin/nightwatch --test ui-tests/tests/metal.js"
+    "test": "./node_modules/jest-cli/bin/jest.js",
+    "aws-installer-tests": "./node_modules/nightwatch/bin/nightwatch --test ui-tests/tests/aws.js",
+    "baremetal-installer-tests": "./node_modules/nightwatch/bin/nightwatch --test ui-tests/tests/metal.js"
   },
   "jest": {
     "automock": false,
