--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -84,6 +84,15 @@ load("@io_bazel_rules_go//go:def.bzl", "go_prefix")
 
 go_prefix("github.com/coreos/tectonic-installer")
 
+load("@bazel_gazelle//:def.bzl", "gazelle")
+
+gazelle(
+    name = "gazelle",
+    command = "fix",
+    prefix = "github.com/coreos/tectonic-installer",
+    external = "vendored",
+)
+
 alias(
     name = "smoke_tests",
     actual = "//tests/smoke:smoke",
