--- a/modules/ignition/resources/dropins/40-etcd-cluster.conf
+++ b/modules/ignition/resources/dropins/40-etcd-cluster.conf
@@ -10,7 +10,12 @@ ExecStart=
 ExecStart=/usr/lib/coreos/etcd-wrapper \
   --name=${name} \
   --advertise-client-urls=${advertise_client_urls} \
-  ${cert_options} \
+  --cert-file=/etc/ssl/etcd/server.crt \
+  --key-file=/etc/ssl/etcd/server.key \
+  --peer-cert-file=/etc/ssl/etcd/peer.crt \
+  --peer-key-file=/etc/ssl/etcd/peer.key \
+  --peer-trusted-ca-file=/etc/ssl/etcd/ca.crt \
+  --peer-client-cert-auth=true \
   ${initial_cluster} \
   --initial-advertise-peer-urls=${initial_advertise_peer_urls} \
   --listen-client-urls=${scheme}://0.0.0.0:2379 \
