Integration: Rebase on master (#2793)
* module/update-payload: Include TNO and its appversion into the payload.

A follow up PR to the release automation repo is required to fully
update the payload.

* modules/aws: add ec2_ami_override to etcd, master, worker nodes

Adds three terraform variables which can be used to override the
AMI rather than filtering out the latest Container Linux version
for the given node type.

* platform/aws: remove image_re unused variable

* bazel: fix terraform-examples

* bazel: refactor examples and docs

This commit refactors the Bazel rules for examples and Documentation to
accomplish several goals:

1. Openstack artifacts are now correctly compiled;
2. build rules for examples are in the examples directory and build
rules for Documentation are in the Documentation directory.

The last point allows us to easily compile all examples with:

```sh
bazel build examples:all
```

Similarly, we can compile all Documentation by issuing:

```sh
bazel build Documentation:all
```

* Update tectonic-cluo-operator to v0.3.0

* Update CLUO to v0.5.0
* Add support for Kubernetes v1.9

* config.tf: Update etcd version from 3.1.8 to 3.2.14 (#2738)

* bazel: create tarball target (#2750)

This commit adds tarball targets for Bazel.

We can now create tarballs using:

```sh
bazel build tarball
```

This will create a gzip compressed tarball named tectonic.tar.gz. The
contents of the tarball will be nested in a directory named `tectonic`.

To create a tarball with a version string in the directory name, we can
build the tarball using:

```sh
export VERSION=<some version>
bazel build tarball --action_env=VERSION
```

In this case, the file structure will be nested in a directory called
`tectonic_<some version>`.

This commit also makes the installer binaries pure go so that they are
statically linked, which is nicer for containers.

* *: Remove option to deploy etcd without TLS (#2763

--- a/installer/frontend/.eslintrc
+++ b/installer/frontend/.eslintrc
@@ -84,6 +84,7 @@
     "react/prop-types": 0,
     "react/self-closing-comp": [2, {"component": true, "html": false}],
     "semi": 2,
+    "space-before-function-paren": 2,
     "space-infix-ops": 2,
     "strict": [2, "never"],
     "template-curly-spacing": 2,
