--- a/contrib/terraform-examples/BUILD.bazel
+++ b/contrib/terraform-examples/BUILD.bazel
@@ -6,9 +6,9 @@ go_library(
     importpath = "github.com/coreos/tectonic-installer/contrib/terraform-examples",
     visibility = ["//visibility:private"],
     deps = [
-        "//vendor/github.com/hashicorp/hcl:go_default_library",
-        "//vendor/github.com/hashicorp/hcl/hcl/ast:go_default_library",
-        "//vendor/github.com/hashicorp/hcl/hcl/token:go_default_library",
+        "@com_github_hashicorp_hcl//:go_default_library",
+        "@com_github_hashicorp_hcl//hcl/ast:go_default_library",
+        "@com_github_hashicorp_hcl//hcl/token:go_default_library",
     ],
 )
 
