--- a/tests/rspec/Gemfile
+++ b/tests/rspec/Gemfile
@@ -4,6 +4,7 @@ source 'https://rubygems.org'
 
 gem 'aws-sdk-autoscaling'
 gem 'aws-sdk-ec2'
+gem 'aws-sdk-iam'
 gem 'certificate_authority'
 gem 'chromedriver-helper', '~>1.1.0'
 gem 'faker', '~>1.8.4'
