--- a/installer/api/BUILD.bazel
+++ b/installer/api/BUILD.bazel
@@ -31,6 +31,7 @@ go_library(
         "//installer/vendor/github.com/aws/aws-sdk-go/service/route53domains:go_default_library",
         "//installer/vendor/github.com/coreos/go-semver/semver:go_default_library",
         "//installer/vendor/github.com/dghubble/sessions:go_default_library",
+        "//installer/vendor/github.com/ghodss/yaml:go_default_library",
         "//installer/vendor/github.com/kardianos/osext:go_default_library",
         "//installer/vendor/k8s.io/client-go/kubernetes:go_default_library",
         "//installer/vendor/k8s.io/client-go/pkg/api/v1:go_default_library",
