modules: fix ca-certificates mount src
This PR changes the ca-certificates mounts for:

* k8s-node-bootstrap.service; and
* tectonic-channel-operator.yaml

Rather than rely on /usr/share/ca-certificates/ca-certificates.crt they
should be using /etc/ssl/certs/ca-certificates.crt since this will
actually include admin-installed certs.

--- a/modules/bootkube/resources/bootstrap-manifests/bootstrap-apiserver.yaml
+++ b/modules/bootkube/resources/bootstrap-manifests/bootstrap-apiserver.yaml
@@ -59,7 +59,7 @@ spec:
       path: /etc/kubernetes/cloud
   - name: ssl-certs-host
     hostPath:
-      path: /usr/share/ca-certificates
+      path: /etc/ssl/certs
   - name: var-lock
     hostPath:
       path: /var/lock
