--- a/modules/bootkube/resources/manifests/kube-proxy.yaml
+++ b/modules/bootkube/resources/manifests/kube-proxy.yaml
@@ -53,7 +53,7 @@ spec:
         effect: "NoSchedule"
       volumes:
       - hostPath:
-          path: /usr/share/ca-certificates
+          path: /etc/ssl/certs
         name: ssl-certs-host
       - name: etc-kubernetes
         hostPath:
