--- a/modules/tectonic/resources/manifests/updater/operators/tectonic-channel-operator.yaml
+++ b/modules/tectonic/resources/manifests/updater/operators/tectonic-channel-operator.yaml
@@ -51,4 +51,4 @@ spec:
       volumes:
       - name: certs
         hostPath:
-          path: /usr/share/ca-certificates
+          path: /etc/ssl/certs
