--- a/modules/bootkube/resources/bootstrap-manifests/bootstrap-apiserver.yaml
+++ b/modules/bootkube/resources/bootstrap-manifests/bootstrap-apiserver.yaml
@@ -28,6 +28,7 @@ spec:
     - --advertise-address=${advertise_address}
     - --kubelet-client-certificate=/etc/kubernetes/secrets/apiserver.crt
     - --kubelet-client-key=/etc/kubernetes/secrets/apiserver.key
+    - --kubelet-preferred-address-types=InternalIP,ExternalIP,Hostname
     - --runtime-config=""
     - --secure-port=443
     - --service-account-key-file=/etc/kubernetes/secrets/service-account.pub
