tests/frontend: Update GUI Nightwatch tests to diff new YAML config file
Adds js-yaml as a dev dependency.

--- a/installer/frontend/package.json
+++ b/installer/frontend/package.json
@@ -57,6 +57,7 @@
     "eslint-plugin-import": "2.x",
     "eslint-plugin-react": "7.x",
     "jest-cli": "22.x",
+    "js-yaml": "3.10.x",
     "jszip": "3.x",
     "nightwatch": "0.9.x",
     "request": "2.x",
