--- a/modules/bootkube/resources/manifests/01-tectonic-namespace.yaml
+++ b/modules/bootkube/resources/manifests/01-tectonic-namespace.yaml
@@ -2,3 +2,5 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: tectonic-system # Create the namespace first.
+  labels: # network policy can only select by labels
+    name: tectonic-system
