--- a/installer/assets/BUILD.bazel
+++ b/installer/assets/BUILD.bazel
@@ -6,7 +6,7 @@ go_library(
     name = "go_default_library",
     srcs = [
         "assets.go",
-        ":bindata",
+        "bindata.go",
         "doc.go",
     ],
     importpath = "github.com/coreos/tectonic-installer/installer/assets",
