--- a/installer/pkg/workflow/BUILD.bazel
+++ b/installer/pkg/workflow/BUILD.bazel
@@ -5,11 +5,13 @@ go_library(
     srcs = [
         "destroy.go",
         "install.go",
+        "utils.go",
         "workflow.go",
     ],
     importpath = "github.com/coreos/tectonic-installer/installer/pkg/workflow",
     visibility = ["//visibility:public"],
     deps = [
+        "//installer/pkg/config:go_default_library",
         "//installer/pkg/tectonic:go_default_library",
     ],
 )
