modules/tectonic: fix alertmanager ingress config.
The alert manager ingress config expects both the host and the port.
Previously we only provided the host. This can break on some platforms
where the port is required to access Tectonic ingress.

--- a/modules/tectonic/resources/manifests/updater/tectonic-monitoring-config.yaml
+++ b/modules/tectonic/resources/manifests/updater/tectonic-monitoring-config.yaml
@@ -14,7 +14,7 @@ data:
     alertmanagerMain:
       baseImage: ${alertmanager_base_image}
     ingress:
-      baseAddress: ${console_base_host}
+      baseAddress: ${base_address}
     auth:
       baseImage: ${tectonic_monitoring_auth_base_image}
     nodeExporter:
