update bazel for steps and cli

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -7,6 +7,7 @@ package(
 template_files = glob([
     "modules/**/*",
     "platforms/**/*",
+    "steps/**/*",
 ])
 
 config_setting(
@@ -124,7 +125,7 @@ genrule(
 pkg_tar(
     name = "tarball_terraform_configuration",
     mode = "0644",
-    srcs = ["config.tf", "modules", "platforms"],
+    srcs = ["config.tf", "modules", "platforms", "steps"],
 )
 
 pkg_tar(
@@ -139,6 +140,20 @@ pkg_tar(
     mode = "0755",
     package_dir = "tectonic-installer/linux",
     srcs = ["//installer/cmd/installer:linux"],
+)
+
+pkg_tar(
+    name = "tarball_tectonic_cli_binary_darwin",
+    mode = "0755",
+    package_dir = "tectonic-installer/darwin",
+    srcs = ["//installer/cmd/tectonic:darwin"],
+)
+
+pkg_tar(
+    name = "tarball_tectonic_cli_binary_linux",
+    mode = "0755",
+    package_dir = "tectonic-installer/linux",
+    srcs = ["//installer/cmd/tectonic:linux"],
 )
 
 pkg_tar(
@@ -184,6 +199,9 @@ filegroup(
         exclude_directories=1,
     ) + glob(
         ["platforms/**/*.tf"],
+        exclude_directories=1,
+    ) + glob(
+        ["steps/**/*.tf"],
         exclude_directories=1,
     ) + ["config.tf"],
 )
