--- a/installer/pkg/workflow/BUILD.bazel
+++ b/installer/pkg/workflow/BUILD.bazel
@@ -1,19 +1,27 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
+
+go_test(
+    name = "go_default_test",
+    srcs = ["workflow_test.go"],
+    embed = [":go_default_library"],
+)
 
 go_library(
     name = "go_default_library",
     srcs = [
         "destroy.go",
+        "init.go",
         "install.go",
-        "utils.go",
         "terraform.go",
+        "utils.go",
         "workflow.go",
     ],
     importpath = "github.com/coreos/tectonic-installer/installer/pkg/workflow",
     visibility = ["//visibility:public"],
     deps = [
         "//installer/pkg/config:go_default_library",
-        "//installer/pkg/tectonic:go_default_library",
+        "//installer/pkg/config-generator:go_default_library",
+        "//installer/pkg/terraform-generator:go_default_library",
         "//installer/vendor/k8s.io/client-go/kubernetes:go_default_library",
         "//installer/vendor/k8s.io/client-go/tools/clientcmd:go_default_library",
     ],
