modules/ignition/resources/dropins/40-etcd-cluster.conf: Fix run args
The dropin file for the etcd-member service was inadvertently
overwriting the existing RKT_RUN_ARGS set in the service
unit file. This prevented the uuid-file-save from being set, which
then prevented the service from being restarted correctly on reboot, etc.

--- a/modules/ignition/resources/dropins/40-etcd-cluster.conf
+++ b/modules/ignition/resources/dropins/40-etcd-cluster.conf
@@ -5,7 +5,8 @@ ${metadata_deps}
 Environment="ETCD_IMAGE=${container_image}"
 ${metadata_env}
 Environment="RKT_RUN_ARGS=--volume etcd-ssl,kind=host,source=/etc/ssl/etcd \
-  --mount volume=etcd-ssl,target=/etc/ssl/etcd"
+  --mount volume=etcd-ssl,target=/etc/ssl/etcd \
+  --uuid-file-save=/var/lib/coreos/etcd-member-wrapper.uuid"
 ExecStart=
 ExecStart=/usr/lib/coreos/etcd-wrapper \
   --name=${name} \
