installer: fix GUI tests

--- a/images/tectonic-builder/Dockerfile.bazel
+++ b/images/tectonic-builder/Dockerfile.bazel
@@ -5,7 +5,16 @@ RUN echo "deb [arch=amd64] http://storage.googleapis.com/bazel-apt testing jdk1.
     curl https://bazel.build/bazel-release.pub.gpg | apt-key add -
 
 RUN apt-get update \
-    && apt-get -y install bazel=0.10.0~rc6 \
+    && apt-get -y install bazel \
+    && rm -rf /var/lib/apt/lists/*
+
+# Install Chrome for installer gui tests
+# Use Chrome beta because v60 or higher is needed for headless mode
+RUN wget --quiet -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - && \
+    sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list' && \
+    apt-get update && \
+    apt-get install --no-install-recommends -y -q \
+    google-chrome-beta ca-certificates xvfb xauth \
     && rm -rf /var/lib/apt/lists/*
 
 RUN useradd -ms /bin/bash bazel
